2002-07-02  Per Bothner  <per@bothner.com>

	* XMLPrinter.java:  Replace all calls of writeRaw to super.write.
	This avoids a JDK1.1 problem with super.out not being accessible.
	(writeRaw):  Remove no-longer-used methods.

2002-06-26  Per Bothner  <per@bothner.com>

	* XMLParser.java.in (parse):  Fix setting of 'start' after 'fill'.

2002-06-24  Per Bothner  <per@bothner.com>

	* Makefile.am:  Renamed generated XMLParser class to XMLParserChar.

	* ParsedXMLToConsumer.java (parse):  Remove static helper method.
	Replaced by new Document.parse methods.

2002-06-19  Per Bothner  <per@bothner.com>

	* XMLParser.java.in:  Set up for more useful inheritance.
	(buffer, pos, limit, in):  Make protected.
	(parse):  Initiaze start safely even if buffer is null.
	(error):  Take extra serverity parameter.
	(parse):  Chaneg calls to error apropriately.
	(fill):  Handle copying saved data here, rather than in parse.
	(parse):  More specific error message if expecting attribute name.

2002-05-06  Per Bothner  <per@bothner.com>

	* NamespaceResolver.java (getIndex):  Fix logic error.

	* XMLParser.java.in:  New constructor.

	* QName.java.in (toString):  Print a null namespaceURI as '*'.

2002-04-07  Per Bothner  <per@bothner.com>

	* XPath.java:  Mark as deprecated.
	* XPathConstants.java:  Likewise.
	* XPathContext.java:  Likewise.
	* XPathParser.java:  Likewise.

2002-03-24  Per Bothner  <per@bothner.com>

	* QName.java.in (hashCode):  Allow localname to be null.

2002-03-02  Per Bothner  <per@bothner.com>

	* Makefile.am (SED_REFERENCES_SUBS): Moved to Make-rules.

2002-02-15  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST):  Leave out redundant $(java_sources).
	Add package.html.

2002-02-14  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (writeObject):  Check for gnu.text.Char.

2002-02-13  Per Bothner  <per@bothner.com>

	* ParsedXMLToConsumer.java (emitEntityReference):  New method.

	* XMLPrinter.java (writeChar): Fix output of character references.